--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="org.movsim.movdroid"
+    package="com.elsewhat.movdroid"
     android:versionCode="1"
     android:versionName="1.0"
     android:installLocation="auto" >
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
-    <uses-sdk android:targetSdkVersion="15" android:minSdkVersion="7"/>
+    <uses-sdk android:targetSdkVersion="19" android:minSdkVersion="7"/>
     
     <supports-screens android:largeScreens="true" android:anyDensity="true" />
     <uses-permission android:name="android.permission.READ_PROFILE"/>
@@ -18,7 +18,7 @@
         android:theme="@style/Theme.Sherlock" >
         
         <activity
-            android:name=".MovSimDroidActivity"
+            android:name="org.movsim.movdroid.MovSimDroidActivity"
             android:uiOptions="splitActionBarWhenNarrow"
             android:label="@string/app_name"
             android:configChanges="orientation|keyboardHidden|screenSize">
@@ -29,14 +29,14 @@
             </intent-filter>
         </activity>
         
-        <activity android:label="@string/dialog" android:name=".InfoDialog" android:theme="@style/Theme.Sherlock.Dialog">
+        <activity android:label="@string/dialog" android:name="org.movsim.movdroid..InfoDialog" android:theme="@android:style/Theme.Dialog">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
               <!--   <category android:name="com.actionbarsherlock.sample.demos.EXAMPLE"/> --> 
             </intent-filter>
         </activity>
         
-        <activity android:label="@string/dialog" android:name=".HighScoreView" android:theme="@style/Theme.Sherlock.Dialog">
+        <activity android:label="@string/dialog" android:name="org.movsim.movdroid..HighScoreView" android:theme="@android:style/Theme.Dialog">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
               <!--   <category android:name="com.actionbarsherlock.sample.demos.EXAMPLE"/> --> 
