--- a/project.properties
+++ b/project.properties
@@ -11,5 +11,5 @@
 #proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
 
 # Project target.
-target=android-17
-android.library.reference.1=../../../Downloads/ActionBarSherlock-4.2.0/library
+target=android-19
+android.library.reference.1=../../../../../Dev/workspace_android/JakeWharton-ActionBarSherlock-5a15d92/actionbarsherlock
