--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -15,8 +15,9 @@
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/Theme.Sherlock" >
-        
+        android:theme="@style/Theme.Sherlock" 
+        android:largeHeap="true">
+                
         <activity
             android:name="org.movsim.movdroid.MovSimDroidActivity"
             android:uiOptions="splitActionBarWhenNarrow"
@@ -29,14 +30,14 @@
             </intent-filter>
         </activity>
         
-        <activity android:label="@string/dialog" android:name="org.movsim.movdroid..InfoDialog" android:theme="@android:style/Theme.Dialog">
+        <activity android:label="@string/dialog" android:name="org.movsim.movdroid.InfoDialog" android:theme="@android:style/Theme.Dialog">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
               <!--   <category android:name="com.actionbarsherlock.sample.demos.EXAMPLE"/> --> 
             </intent-filter>
         </activity>
         
-        <activity android:label="@string/dialog" android:name="org.movsim.movdroid..HighScoreView" android:theme="@android:style/Theme.Dialog">
+        <activity android:label="@string/dialog" android:name="org.movsim.movdroid.HighScoreView" android:theme="@android:style/Theme.Dialog">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
               <!--   <category android:name="com.actionbarsherlock.sample.demos.EXAMPLE"/> --> 
