--- a/assets/sim/games/ramp_metering.properties
+++ b/assets/sim/games/ramp_metering.properties
@@ -14,7 +14,7 @@ roadEdgeColor=222222
 roadLineColor=DDDDDD
 sourceColor=FFFFFF
 sinkColor=000000
-drawRoadId=false
+drawRoadId=true
 drawSources=true
 drawSinks=true
 drawSpeedLimits=true
